@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2024 Hedera Hashgraph, LLC
+ * Copyright (C) 2024-2025 Hedera Hashgraph, LLC
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,6 +16,7 @@
 
 package com.hedera.node.app;
 
+import static com.hedera.node.app.history.impl.HistoryLibraryCodecImpl.HISTORY_LIBRARY_CODEC;
 import static com.swirlds.common.io.utility.FileUtils.getAbsolutePath;
 import static com.swirlds.common.io.utility.FileUtils.rethrowIO;
 import static com.swirlds.common.threading.manager.AdHocThreadManager.getStaticThreadManager;
@@ -24,30 +25,36 @@ import static com.swirlds.logging.legacy.LogMarker.STARTUP;
 import static com.swirlds.platform.builder.PlatformBuildConstants.DEFAULT_CONFIG_FILE_NAME;
 import static com.swirlds.platform.builder.PlatformBuildConstants.DEFAULT_OVERRIDES_YAML_FILE_NAME;
 import static com.swirlds.platform.builder.PlatformBuildConstants.DEFAULT_SETTINGS_FILE_NAME;
-import static com.swirlds.platform.builder.PlatformBuildConstants.LOG4J_FILE_NAME;
 import static com.swirlds.platform.builder.internal.StaticPlatformBuilder.getMetricsProvider;
+import static com.swirlds.platform.builder.internal.StaticPlatformBuilder.initLogging;
 import static com.swirlds.platform.builder.internal.StaticPlatformBuilder.setupGlobalMetrics;
 import static com.swirlds.platform.config.internal.PlatformConfigUtils.checkConfiguration;
 import static com.swirlds.platform.crypto.CryptoStatic.initNodeSecurity;
-import static com.swirlds.platform.roster.RosterUtils.buildRosterHistory;
+import static com.swirlds.platform.roster.RosterUtils.buildAddressBook;
 import static com.swirlds.platform.state.signed.StartupStateUtils.copyInitialSignedState;
-import static com.swirlds.platform.system.SystemExitCode.CONFIGURATION_ERROR;
+import static com.swirlds.platform.system.InitTrigger.GENESIS;
+import static com.swirlds.platform.system.InitTrigger.RESTART;
 import static com.swirlds.platform.system.SystemExitCode.NODE_ADDRESS_MISMATCH;
 import static com.swirlds.platform.system.SystemExitUtils.exitSystem;
-import static com.swirlds.platform.util.BootstrapUtils.checkNodesToRun;
-import static com.swirlds.platform.util.BootstrapUtils.detectSoftwareUpgrade;
 import static com.swirlds.platform.util.BootstrapUtils.getNodesToRun;
 import static java.util.Objects.requireNonNull;
 
 import com.google.common.annotations.VisibleForTesting;
+import com.hedera.node.app.hints.impl.FakeHintsLibrary;
+import com.hedera.node.app.hints.impl.HintsServiceImpl;
+import com.hedera.node.app.history.impl.HistoryLibraryImpl;
+import com.hedera.node.app.history.impl.HistoryServiceImpl;
+import com.hedera.node.app.ids.EntityIdService;
+import com.hedera.node.app.ids.ReadableEntityIdStoreImpl;
 import com.hedera.node.app.info.DiskStartupNetworks;
+import com.hedera.node.app.roster.RosterService;
 import com.hedera.node.app.service.addressbook.AddressBookService;
 import com.hedera.node.app.service.addressbook.impl.ReadableNodeStoreImpl;
 import com.hedera.node.app.services.OrderedServiceMigrator;
 import com.hedera.node.app.services.ServicesRegistryImpl;
-import com.hedera.node.app.store.ReadableStoreFactory;
-import com.hedera.node.app.tss.TssBaseServiceImpl;
-import com.hedera.node.app.tss.TssLibraryImpl;
+import com.hedera.node.app.state.StateLifecyclesImpl;
+import com.hedera.node.app.tss.TssBlockHashSigner;
+import com.hedera.node.internal.network.Network;
 import com.swirlds.base.time.Time;
 import com.swirlds.common.constructable.ConstructableRegistry;
 import com.swirlds.common.constructable.RuntimeConstructable;
@@ -59,7 +66,6 @@ import com.swirlds.common.io.utility.RecycleBin;
 import com.swirlds.common.merkle.crypto.MerkleCryptoFactory;
 import com.swirlds.common.merkle.crypto.MerkleCryptographyFactory;
 import com.swirlds.common.platform.NodeId;
-import com.swirlds.common.startup.Log4jSetup;
 import com.swirlds.config.api.Configuration;
 import com.swirlds.config.api.ConfigurationBuilder;
 import com.swirlds.config.extensions.sources.SystemEnvironmentConfigSource;
@@ -70,15 +76,15 @@ import com.swirlds.platform.Browser;
 import com.swirlds.platform.CommandLineArgs;
 import com.swirlds.platform.ParameterProvider;
 import com.swirlds.platform.builder.PlatformBuilder;
+import com.swirlds.platform.config.BasicConfig;
 import com.swirlds.platform.config.legacy.ConfigurationException;
 import com.swirlds.platform.config.legacy.LegacyConfigProperties;
 import com.swirlds.platform.config.legacy.LegacyConfigPropertiesLoader;
 import com.swirlds.platform.crypto.CryptoStatic;
-import com.swirlds.platform.roster.RosterHistory;
 import com.swirlds.platform.roster.RosterUtils;
 import com.swirlds.platform.state.PlatformMerkleStateRoot;
-import com.swirlds.platform.state.address.AddressBookInitializer;
-import com.swirlds.platform.state.service.ReadableRosterStore;
+import com.swirlds.platform.state.StateLifecycles;
+import com.swirlds.platform.state.service.ReadableRosterStoreImpl;
 import com.swirlds.platform.state.signed.HashedReservedSignedState;
 import com.swirlds.platform.state.signed.SignedState;
 import com.swirlds.platform.state.signed.StartupStateUtils;
@@ -86,7 +92,6 @@ import com.swirlds.platform.system.InitTrigger;
 import com.swirlds.platform.system.Platform;
 import com.swirlds.platform.system.SoftwareVersion;
 import com.swirlds.platform.system.SwirldMain;
-import com.swirlds.platform.system.SwirldState;
 import com.swirlds.platform.system.address.AddressBook;
 import com.swirlds.platform.util.BootstrapUtils;
 import com.swirlds.state.State;
@@ -94,9 +99,11 @@ import com.swirlds.state.merkle.MerkleStateRoot;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import java.time.InstantSource;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ForkJoinPool;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.function.Predicate;
 import java.util.function.Supplier;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -106,8 +113,20 @@ import org.apache.logging.log4j.Logger;
  *
  * <p>This class simply delegates to {@link Hedera}.
  */
-public class ServicesMain implements SwirldMain {
+public class ServicesMain implements SwirldMain<PlatformMerkleStateRoot> {
     private static final Logger logger = LogManager.getLogger(ServicesMain.class);
+
+    /**
+     * A supplier that refuses to satisfy fallback requests for a set of node ids to run
+     * simultaneously; this is only useful for certain platform testing applications
+     */
+    private static final Supplier<Set<NodeId>> ILLEGAL_FALLBACK_NODE_IDS = () -> {
+        throw new IllegalStateException("The node id must be configured explicitly");
+    };
+    /**
+     * Upfront validation on node ids is only useful for certain platform testing applications
+     */
+    private static final Predicate<NodeId> NOOP_NODE_VALIDATOR = nodeId -> true;
 
     /**
      * The {@link Hedera} singleton.
@@ -153,6 +172,14 @@ public class ServicesMain implements SwirldMain {
      * {@inheritDoc}
      */
     @Override
+    public StateLifecycles<PlatformMerkleStateRoot> newStateLifecycles() {
+        return new StateLifecyclesImpl(hederaOrThrow());
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
     public void run() {
         hederaOrThrow().run();
     }
@@ -176,7 +203,7 @@ public class ServicesMain implements SwirldMain {
      *     and the working directory <i>settings.txt</i>, providing the same
      *     {@link Hedera#newMerkleStateRoot()} method reference as the genesis state
      *     factory. (<b>IMPORTANT:</b> This step instantiates and invokes
-     *     {@link SwirldState#init(Platform, InitTrigger, SoftwareVersion)}
+     *     {@link StateLifecycles#onStateInitialized(MerkleStateRoot, Platform, InitTrigger, SoftwareVersion)}
      *     on a {@link MerkleStateRoot} instance that delegates the call back to our
      *     Hedera instance.)</li>
      *     <li>Call {@link Hedera#init(Platform, NodeId)} to complete startup phase
@@ -206,7 +233,7 @@ public class ServicesMain implements SwirldMain {
      * </ol>
      *  Now, note that {@link Hedera#newMerkleStateRoot()} returns {@link PlatformMerkleStateRoot}
      *  instances that delegate their lifecycle methods to an injected instance of
-     *  {@link com.swirlds.platform.state.MerkleStateLifecycles}---and the implementation of that
+     *  {@link StateLifecycles}---and the implementation of that
      *  injected by {@link Hedera#newMerkleStateRoot()} delegates these calls back to the Hedera
      *  instance itself.
      *  <p>
@@ -219,34 +246,93 @@ public class ServicesMain implements SwirldMain {
      * @param args optionally, what node id to run; required if the address book is ambiguous
      */
     public static void main(final String... args) throws Exception {
-        // --- Configure platform infrastructure and context from the command line and environment ---
+        // --- Configure platform infrastructure and derive node id from the command line and environment ---
+        initLogging();
         BootstrapUtils.setupConstructableRegistry();
-        final var diskAddressBook = loadAddressBook(DEFAULT_CONFIG_FILE_NAME);
         final var commandLineArgs = CommandLineArgs.parse(args);
         if (commandLineArgs.localNodesToStart().size() > 1) {
             logger.error(
                     EXCEPTION.getMarker(),
                     "Multiple nodes were supplied via the command line. Only one node can be started per java process.");
             exitSystem(NODE_ADDRESS_MISMATCH);
+            // the following throw is not reachable in production,
+            // but reachable in testing with static mocked system exit calls.
+            throw new ConfigurationException();
         }
-        final List<NodeId> nodesToRun = getNodesToRun(diskAddressBook, commandLineArgs.localNodesToStart());
-        checkNodesToRun(nodesToRun);
-        final var selfId = ensureSingleNode(nodesToRun, commandLineArgs.localNodesToStart());
         final var platformConfig = buildPlatformConfig();
-        BootstrapUtils.setupConstructableRegistryWithConfiguration(platformConfig);
-        final var networkKeysAndCerts = initNodeSecurity(diskAddressBook, platformConfig);
-        final var keysAndCerts = networkKeysAndCerts.get(selfId);
+        // Immediately initialize the cryptography and merkle cryptography factories
+        // to avoid using default behavior instead of that defined in platformConfig
+        final var cryptography = CryptographyFactory.create();
+        CryptographyHolder.set(cryptography);
+        final var merkleCryptography = MerkleCryptographyFactory.create(platformConfig, cryptography);
+        MerkleCryptoFactory.set(merkleCryptography);
+
+        // Determine which nodes were _requested_ to run from the command line
+        final var cliNodesToRun = commandLineArgs.localNodesToStart();
+        // Determine which nodes are _configured_ to run from the config file(s)
+        final var configNodesToRun =
+                platformConfig.getConfigData(BasicConfig.class).nodesToRun();
+        // Using the requested nodes to run from the command line, the nodes configured to run, and now the
+        // address book on disk, reconcile the list of nodes to run
+        final List<NodeId> nodesToRun =
+                getNodesToRun(cliNodesToRun, configNodesToRun, ILLEGAL_FALLBACK_NODE_IDS, NOOP_NODE_VALIDATOR);
+        // Finally, verify that the reconciliation of above node IDs yields exactly one node to run
+        final var selfId = ensureSingleNode(nodesToRun);
+
+        // --- Initialize the platform metrics and the Hedera instance ---
         setupGlobalMetrics(platformConfig);
         metrics = getMetricsProvider().createPlatformMetrics(selfId);
+        hedera = newHedera(metrics);
+        final var version = hedera.getSoftwareVersion();
+        final var isGenesis = new AtomicBoolean(false);
+        logger.info("Starting node {} with version {}", selfId, version);
+
+        // --- Build required infrastructure to load the initial state, then initialize the States API ---
+        BootstrapUtils.setupConstructableRegistryWithConfiguration(platformConfig);
         final var time = Time.getCurrent();
         final var fileSystemManager = FileSystemManager.create(platformConfig);
         final var recycleBin =
                 RecycleBin.create(metrics, platformConfig, getStaticThreadManager(), time, fileSystemManager, selfId);
-        final var cryptography = CryptographyFactory.create();
-        CryptographyHolder.set(cryptography);
-        cryptography.digestSync(diskAddressBook);
-        final var merkleCryptography = MerkleCryptographyFactory.create(platformConfig, cryptography);
-        MerkleCryptoFactory.set(merkleCryptography);
+        StateLifecycles<PlatformMerkleStateRoot> stateLifecycles = hedera.newStateLifecycles();
+        final var maybeDiskAddressBook = loadLegacyAddressBook();
+        final var reservedState = loadInitialState(
+                platformConfig,
+                recycleBin,
+                version,
+                () -> {
+                    isGenesis.set(true);
+                    Network genesisNetwork;
+                    try {
+                        genesisNetwork = hedera.startupNetworks().genesisNetworkOrThrow(platformConfig);
+                    } catch (Exception ignore) {
+                        // Fallback to the legacy address book if genesis-network.json or equivalent not loaded
+                        genesisNetwork = DiskStartupNetworks.fromLegacyAddressBook(maybeDiskAddressBook.orElseThrow());
+                    }
+                    final var genesisState = hedera.newMerkleStateRoot();
+                    hedera.initializeStatesApi(genesisState, GENESIS, genesisNetwork, platformConfig);
+                    return genesisState;
+                },
+                Hedera.APP_NAME,
+                Hedera.SWIRLD_NAME,
+                selfId);
+        final var initialState = reservedState.state();
+        final var state = initialState.get().getState();
+        if (!isGenesis.get()) {
+            hedera.initializeStatesApi(state, RESTART, null, platformConfig);
+        }
+        hedera.setInitialStateHash(reservedState.hash());
+
+        // --- Create the platform context and initialize the cryptography ---
+        final var rosterStore = new ReadableRosterStoreImpl(state.getReadableStates(RosterService.NAME));
+        final var currentRoster = requireNonNull(rosterStore.getActiveRoster());
+        // For now we convert to a legacy representation of the roster for convenience
+        final var addressBook = requireNonNull(buildAddressBook(currentRoster));
+        if (!addressBook.contains(selfId)) {
+            throw new IllegalStateException("Self node id " + selfId + " is not in the address book");
+        }
+        final var networkKeysAndCerts = initNodeSecurity(addressBook, platformConfig, Set.copyOf(nodesToRun));
+        final var keysAndCerts = networkKeysAndCerts.get(selfId);
+        cryptography.digestSync(addressBook);
         final var platformContext = PlatformContext.create(
                 platformConfig,
                 Time.getCurrent(),
@@ -256,70 +342,21 @@ public class ServicesMain implements SwirldMain {
                 recycleBin,
                 merkleCryptography);
 
-        // --- Construct the Hedera instance and use it to initialize the starting state ---
-        hedera = newHedera(selfId, metrics);
-        final var version = hedera.getSoftwareVersion();
-        final var isGenesis = new AtomicBoolean(false);
-        // We want to be able to see the schema migration logs, so init logging here
-        initLogging();
-        logger.info("Starting node {} with version {}", selfId, version);
-        final var reservedState = loadInitialState(
-                platformConfig,
-                recycleBin,
-                version,
-                () -> {
-                    isGenesis.set(true);
-                    final var genesisState = hedera.newMerkleStateRoot();
-                    final var genesisNetwork = DiskStartupNetworks.fromLegacyAddressBook(diskAddressBook);
-                    hedera.initializeStatesApi(
-                            genesisState,
-                            metrics,
-                            InitTrigger.GENESIS,
-                            genesisNetwork,
-                            platformConfig,
-                            diskAddressBook);
-                    return genesisState;
-                },
-                Hedera.APP_NAME,
-                Hedera.SWIRLD_NAME,
-                selfId);
-        final var initialState = reservedState.state();
-        if (!isGenesis.get()) {
-            hedera.initializeStatesApi(
-                    initialState.get().getState(), metrics, InitTrigger.RESTART, null, platformConfig, diskAddressBook);
-        }
-        hedera.setInitialStateHash(reservedState.hash());
-
         // --- Now build the platform and start it ---
-        final var stateRoot = initialState.get().getState();
-        final RosterHistory rosterHistory;
-        if (hedera.isRosterLifecycleEnabled()) {
-            final var rosterStore = new ReadableStoreFactory(stateRoot).getStore(ReadableRosterStore.class);
-            rosterHistory = RosterUtils.createRosterHistory(rosterStore);
-        } else {
-            // This constructor both does extensive validation and has the side effect of
-            // moving unused config.txt files to an archive directory; so keep calling it
-            // here until we enable the roster lifecycle
-            new AddressBookInitializer(
-                    selfId,
-                    version,
-                    detectSoftwareUpgrade(version, initialState.get()),
-                    initialState.get(),
-                    diskAddressBook.copy(),
-                    platformContext);
-            rosterHistory = buildRosterHistory((State) initialState.get().getState());
-        }
+        final var rosterHistory = RosterUtils.createRosterHistory(rosterStore);
         final var platformBuilder = PlatformBuilder.create(
                         Hedera.APP_NAME,
                         Hedera.SWIRLD_NAME,
                         version,
                         initialState,
+                        stateLifecycles,
                         selfId,
-                        canonicalEventStreamLoc(selfId.id(), stateRoot),
+                        canonicalEventStreamLoc(selfId.id(), state),
                         rosterHistory)
                 .withPlatformContext(platformContext)
                 .withConfiguration(platformConfig)
-                .withKeysAndCerts(keysAndCerts);
+                .withKeysAndCerts(keysAndCerts)
+                .withSystemTransactionEncoderCallback(hedera::encodeSystemTransaction);
         final var platform = platformBuilder.build();
         hedera.init(platform, selfId);
         platform.start();
@@ -333,47 +370,39 @@ public class ServicesMain implements SwirldMain {
      * @param root the platform merkle state root
      * @return the event stream name
      */
-    private static String canonicalEventStreamLoc(final long nodeId, @NonNull final PlatformMerkleStateRoot root) {
-        final var nodeStore = new ReadableNodeStoreImpl(root.getReadableStates(AddressBookService.NAME));
+    private static String canonicalEventStreamLoc(final long nodeId, @NonNull final State root) {
+        final var nodeStore = new ReadableNodeStoreImpl(
+                root.getReadableStates(AddressBookService.NAME),
+                new ReadableEntityIdStoreImpl(root.getReadableStates(EntityIdService.NAME)));
         final var accountId = requireNonNull(nodeStore.get(nodeId)).accountIdOrThrow();
         return accountId.shardNum() + "." + accountId.realmNum() + "." + accountId.accountNumOrThrow();
-    }
-
-    private static void initLogging() {
-        final var log4jPath = getAbsolutePath(LOG4J_FILE_NAME);
-        try {
-            Log4jSetup.startLoggingFramework(log4jPath).await();
-        } catch (final InterruptedException e) {
-            // since the logging framework has not been instantiated, also log to stderr
-            e.printStackTrace();
-            Thread.currentThread().interrupt();
-            throw new RuntimeException("Interrupted while waiting for log4j to initialize", e);
-        }
     }
 
     /**
      * Creates a canonical {@link Hedera} instance for the given node id and metrics.
      *
-     * @param selfNodeId the node id
      * @param metrics  the metrics
      * @return the {@link Hedera} instance
      */
-    public static Hedera newHedera(@NonNull final NodeId selfNodeId, @NonNull final Metrics metrics) {
-        requireNonNull(selfNodeId);
+    public static Hedera newHedera(@NonNull final Metrics metrics) {
         requireNonNull(metrics);
         return new Hedera(
                 ConstructableRegistry.getInstance(),
                 ServicesRegistryImpl::new,
                 new OrderedServiceMigrator(),
                 InstantSource.system(),
-                appContext -> new TssBaseServiceImpl(
+                DiskStartupNetworks::new,
+                (appContext, bootstrapConfig) -> new HintsServiceImpl(
+                        metrics, ForkJoinPool.commonPool(), appContext, new FakeHintsLibrary(), bootstrapConfig),
+                (appContext, bootstrapConfig) -> new HistoryServiceImpl(
+                        metrics,
+                        ForkJoinPool.commonPool(),
                         appContext,
-                        ForkJoinPool.commonPool(),
-                        ForkJoinPool.commonPool(),
-                        new TssLibraryImpl(appContext),
-                        ForkJoinPool.commonPool(),
-                        metrics),
-                DiskStartupNetworks::new);
+                        new HistoryLibraryImpl(),
+                        HISTORY_LIBRARY_CODEC,
+                        bootstrapConfig),
+                TssBlockHashSigner::new,
+                metrics);
     }
 
     /**
@@ -386,6 +415,7 @@ public class ServicesMain implements SwirldMain {
         final ConfigurationBuilder configurationBuilder = ConfigurationBuilder.create()
                 .withSource(SystemEnvironmentConfigSource.getInstance())
                 .withSource(SystemPropertiesConfigSource.getInstance());
+
         rethrowIO(() -> BootstrapUtils.setupConfigBuilder(
                 configurationBuilder,
                 getAbsolutePath(DEFAULT_SETTINGS_FILE_NAME),
@@ -396,63 +426,50 @@ public class ServicesMain implements SwirldMain {
     }
 
     /**
-     * Selects the node to run locally from either the command line arguments or the address book.
+     * Ensures there is exactly 1 node to run.
      *
-     * @param nodesToRun        the list of nodes configured to run based on the address book.
-     * @param localNodesToStart the node ids specified on the command line.
+     * @param nodesToRun        the list of nodes configured to run.
      * @return the node which should be run locally.
      * @throws ConfigurationException if more than one node would be started or the requested node is not configured.
      */
-    private static NodeId ensureSingleNode(
-            @NonNull final List<NodeId> nodesToRun, @NonNull final Set<NodeId> localNodesToStart) {
+    private static NodeId ensureSingleNode(@NonNull final List<NodeId> nodesToRun) {
         requireNonNull(nodesToRun);
-        requireNonNull(localNodesToStart);
-        // If no node is specified on the command line and detection by AB IP address is ambiguous, exit.
-        if (nodesToRun.size() > 1 && localNodesToStart.isEmpty()) {
-            logger.error(
-                    EXCEPTION.getMarker(),
-                    "Multiple nodes are configured to run. Only one node can be started per java process.");
-            exitSystem(NODE_ADDRESS_MISMATCH);
-            throw new ConfigurationException(
-                    "Multiple nodes are configured to run. Only one node can be started per java process.");
+
+        logger.info(STARTUP.getMarker(), "The following nodes {} are set to run locally", nodesToRun);
+        if (nodesToRun.isEmpty()) {
+            final String errorMessage = "No nodes are configured to run locally.";
+            logger.error(STARTUP.getMarker(), errorMessage);
+            exitSystem(NODE_ADDRESS_MISMATCH, errorMessage);
+            // the following throw is not reachable in production,
+            // but reachable in testing with static mocked system exit calls.
+            throw new ConfigurationException(errorMessage);
         }
 
-        // If a node is specified on the command line, use that node.
-        final NodeId requestedNodeId = localNodesToStart.stream().findFirst().orElse(null);
-
-        // If a node is specified on the command line but does not have a matching local IP address in the AB, exit.
-        if (nodesToRun.size() > 1 && !nodesToRun.contains(requestedNodeId)) {
-            logger.error(
-                    EXCEPTION.getMarker(),
-                    "The requested node id {} is not configured to run. Please check the address book.",
-                    requestedNodeId);
-            exitSystem(NODE_ADDRESS_MISMATCH);
-            throw new ConfigurationException(String.format(
-                    "The requested node id %s is not configured to run. Please check the address book.",
-                    requestedNodeId));
+        if (nodesToRun.size() > 1) {
+            final String errorMessage = "Multiple nodes are configured to run locally.";
+            logger.error(EXCEPTION.getMarker(), errorMessage);
+            exitSystem(NODE_ADDRESS_MISMATCH, errorMessage);
+            // the following throw is not reachable in production,
+            // but reachable in testing with static mocked system exit calls.
+            throw new ConfigurationException(errorMessage);
         }
-
-        // Return either the node requested via the command line or the only matching node from the AB.
-        return requestedNodeId != null ? requestedNodeId : nodesToRun.get(0);
+        return nodesToRun.getFirst();
     }
 
     /**
-     * Loads the address book from the specified path.
-     *
-     * @param addressBookPath the relative path and file name of the address book.
-     * @return the address book.
+     * Loads the legacy address book if it is present. Can be removed once no environment relies on using
+     * legacy <i>config.txt</i> as a startup asset.
+     * @return the address book from a legacy config file, if present
      */
-    private static AddressBook loadAddressBook(@NonNull final String addressBookPath) {
-        requireNonNull(addressBookPath);
+    @Deprecated
+    private static Optional<AddressBook> loadLegacyAddressBook() {
         try {
             final LegacyConfigProperties props =
-                    LegacyConfigPropertiesLoader.loadConfigFile(getAbsolutePath(addressBookPath));
+                    LegacyConfigPropertiesLoader.loadConfigFile(getAbsolutePath(DEFAULT_CONFIG_FILE_NAME));
             props.appConfig().ifPresent(c -> ParameterProvider.getInstance().setParameters(c.params()));
-            return props.getAddressBook();
-        } catch (final Exception e) {
-            logger.error(EXCEPTION.getMarker(), "Error loading address book", e);
-            exitSystem(CONFIGURATION_ERROR);
-            throw e;
+            return Optional.of(props.getAddressBook());
+        } catch (final Exception ignore) {
+            return Optional.empty();
         }
     }
 
